tests/ui/enum-generics.rs
polygraph::schema!{
    pub enum MyEnum<T> {
        Hello(T),
        Goodbye,
    }
}

fn main() {
}
